[shaunak]added: mutual funds modal opening in  wealth home page

--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -26,11 +26,11 @@
 <div class="mobile-sticky" [hidden]="!MobileSiginBarFlag">
 	<div class="row">
 		<div class="col-6">
-			<a class="btn btn-primary theme-button w-100" href="javascript:void(0)" data-bs-toggle="modal"
+			<a class="btn btn-primary theme-button w-100" href="javascript:void(0)" rel="noopener" data-bs-toggle="modal"
 				data-bs-target="#mob_signup">Customer</a>
 		</div>
 		<div class="col-6">
-			<a class="btn btn-primary theme-button w-100" href="javascript:void(0)" data-bs-toggle="modal"
+			<a class="btn btn-primary theme-button w-100" href="javascript:void(0)" rel="noopener" data-bs-toggle="modal"
 				data-bs-target="#mob_signin">Partner</a>
 		</div>
 	</div>
@@ -44,11 +44,11 @@
 				<div class="col-lg-8 col-sm-6">
 
 					<a style="text-decoration: none;" target="_blank"
-						href="https://ins.finizoninsurance.com/partner/signup">
+						href="https://ins.finizoninsurance.com/partner/signup" rel="noopener">
 						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
 					</a>
 
-					<a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/advisor-login ">
+					<a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/advisor-login" rel="noopener">
 						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Investment</button>
 					</a>
 				</div>
@@ -69,19 +69,19 @@
 					wellness.<br />Version 1.0.0</p>
 				<ul class="follow-list">
 					<li>
-						<a target="_blank" href="https://www.facebook.com/finizonapp"><img src="assets/img/facebook.svg"
+						<a target="_blank" href="https://www.facebook.com/finizonapp" rel="noopener"><img src="assets/img/facebook.svg"
 								alt="fb"></a>
 					</li>
 					<li>
-						<a target="_blank" href="https://www.instagram.com/finizonapp/"><img
+						<a target="_blank" href="https://www.instagram.com/finizonapp/" rel="noopener"><img
 								src="assets/img/instagram.svg" alt="instagram"></a>
 					</li>
 					<li>
-						<a target="_blank" href="https://www.linkedin.com/company/finizonapp/"><img
+						<a target="_blank" href="https://www.linkedin.com/company/finizonapp/" rel="noopener"><img
 								src="assets/img/linkedin.svg" alt="linkedin"></a>
 					</li>
 					<li>
-						<a target="_blank" href="https://twitter.com/finizonapp"><img src="assets/img/twitter.svg"
+						<a target="_blank" href="https://twitter.com/finizonapp" rel="noopener"><img src="assets/img/twitter.svg"
 								alt="twitter"></a>
 					</li>
 				</ul>
@@ -91,10 +91,10 @@
 				<ul class="footer-link">
 
 
-					<li><a target="_blank" href="https://ins.finizoninsurance.com/partner/signup" class="black">Partner
+					<li><a target="_blank" href="https://ins.finizoninsurance.com/partner/signup" class="black" rel="noopener">Partner
 							Registration</a></li>
 
-					<li><a target="_blank" href="https://diy.ins.finizoninsurance.com/user/home/" class="black">Buy
+					<li><a target="_blank" href="https://diy.ins.finizoninsurance.com/user/home/" class="black" rel="noopener">Buy
 							Insurance</a></li>
 
 				</ul>
@@ -106,11 +106,11 @@
 
 					<li><a target="_blank"
 							href="https://docs.google.com/forms/d/e/1FAIpQLSfNgk3MZJANGVd_PwwcUf7PFlsza2GOG-lVp3PYmBcvZyFtAw/viewform"
-							class="black">Partner Registration</a></li>
-					<li><a target="_blank" href="https://wealth.finizon.com/advisor-login" class="black">Partner
+							class="black" rel="noopener">Partner Registration</a></li>
+					<li><a target="_blank" href="https://wealth.finizon.com/advisor-login" class="black" rel="noopener">Partner
 							Login</a>
 					</li>
-					<li><a target="_blank" href="https://wealth.finizon.com/client-login" class="black">Grow your
+					<li><a target="_blank" href="https://wealth.finizon.com/client-login" class="black" rel="noopener">Grow your
 							wealth</a>
 					</li>
 				</ul>
@@ -126,9 +126,7 @@
 
 					<li><a href="javascript:void(0)" (click)="scrollToTerms()">Terms of Use</a></li>
 
-					<li><a target="_blank" href="https://finizon.blogspot.com/" class="black">Blog</a></li>
-
-
+					<li><a target="_blank" href="https://finizon.blogspot.com/" class="black" rel="noopener">Blog</a></li>
 
 				</ul>
 			</div>
@@ -140,9 +138,9 @@
 				<ul class="footer-link">
 
 
-					<li><a target="_blank" href="https://ins.finizoninsurance.com/partner/signup" class="black">Partner
+					<li><a target="_blank" href="https://ins.finizoninsurance.com/partner/signup" class="black" rel="noopener">Partner
 							Registration</a></li>
-					<li><a target="_blank" href="https://diy.ins.finizoninsurance.com/user/home/" class="black">Buy
+					<li><a target="_blank" href="https://diy.ins.finizoninsurance.com/user/home/" class="black" rel="noopener">Buy
 							Insurance</a></li>
 				</ul>
 			</div>
@@ -153,11 +151,11 @@
 
 					<li><a target="_blank"
 							href="https://docs.google.com/forms/d/e/1FAIpQLSfNgk3MZJANGVd_PwwcUf7PFlsza2GOG-lVp3PYmBcvZyFtAw/viewform"
-							class="black">Partner Registration</a></li>
-					<li><a target="_blank" href="https://wealth.finizon.com/advisor-login" class="black">Partner
+							class="black" rel="noopener">Partner Registration</a></li>
+					<li><a target="_blank" href="https://wealth.finizon.com/advisor-login" class="black" rel="noopener">Partner
 							Login</a>
 					</li>
-					<li><a target="_blank" href="https://wealth.finizon.com/client-login" class="black">Grow your
+					<li><a target="_blank" href="https://wealth.finizon.com/client-login" class="black" rel="noopener">Grow your
 							wealth</a>
 					</li>
 				</ul>
@@ -170,9 +168,7 @@
 					<li><a (click)="knowMore()" class="black">Know more</a></li>
 					<li><a href="javascript:void(0)" (click)="scrollToTerms()">Terms of Use</a></li>
 
-					<li><a target="_blank" href="https://finizon.blogspot.com/" class="black">Blog</a></li>
-
-
+					<li><a target="_blank" href="https://finizon.blogspot.com/" class="black" rel="noopener">Blog</a></li>
 				</ul>
 			</div>
 
@@ -186,7 +182,7 @@
 			<p class="notetext mb-0">AAPT Fintech Private Limited , owner of
 
 				<!-- <a href="http://65.1.237.83/">www.finizon.com</a> -->
-				<a href="https://uatnw.finizon.com/">www.finizon.com</a>
+				<a href="https://uatnw.finizon.com/" rel="noopener">www.finizon.com</a>
 
 
 				is an AMFI-registered Mutual Fund Distributor (ARN-232373) of
@@ -201,7 +197,7 @@
 
 				Investment Manager of the products offered through its platform
 				<!-- <a href="http://65.1.237.83/">(www.Finizon.com)</a> -->
-				<a href="https://uatnw.finizon.com/">(www.Finizon.com)</a>
+				<a href="https://uatnw.finizon.com/" rel="noopener">(www.Finizon.com)</a>
 
 
 
@@ -221,7 +217,7 @@
 				whom our company has agreements. Product information is solely based on the information received from
 				the Insurer. Please do not distribute information to unintended recipients.<a
 					href="https://dssrylrxc4fuc.cloudfront.net/attachments/files/000/042/598/original/Terms_and_Conditions_Sign_up_%281%29.pdf?1679036046"
-					target="_blank"> Visit T&C </a></p>
+					target="_blank" rel="noopener"> Visit T&C </a></p>
 
 
 
@@ -230,7 +226,7 @@
 				<span><a href="#" (click)="scrollToTerms()">Terms & Conditions </a> | </span>
 
 
-				<span><a href="#">Copyright {{footerYear}} AAPT Fintech Pvt Ltd.</a></span>
+				<span><a href="#" rel="noopener">Copyright {{footerYear}} AAPT Fintech Pvt Ltd.</a></span>
 			</div>
 		</div>
 	</div>
@@ -244,10 +240,10 @@
 			<div class="modal-body">
 				<div class="col-lg-8 col-sm-6">
 					<a style="text-decoration: none;" target="_blank"
-						href="https://diy.ins.finizoninsurance.com/user/home/">
+						href="https://diy.ins.finizoninsurance.com/user/home/" rel="noopener">
 						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
 					</a>
-					<a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/client-login">
+					<a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/client-login" rel="noopener">
 						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Investment</button>
 					</a>
 				</div>
