--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -93,7 +93,7 @@
     <ul class="hidden-xs hidden-sm scrollmenu">
      
       <li><a data-bs-toggle="collapse" href="#Toolscollapse" role="button" aria-expanded="false"
-        aria-controls="collapseExample" class="drop-menu">Tools</a>
+        aria-controls="collapseExample" class="drop-menu" rel="noopener">Tools</a>
     </li>
       <div class="collapse" id="Toolscollapse">
         <div class="card card-body">
@@ -104,9 +104,9 @@
             <!-- <li><a target="_blank" href="http://65.1.237.83:5800/insureright">Insureright</a></li>
             <li><a target="_blank" href="http://65.1.237.83:5800/spprd/hospicash?referralid=care">Hospicash</a></li>
             <li><a target="_blank" href="http://65.1.237.83:5800/spprd/wellness?referralid=svaas">Wellness</a></li> -->
-            <li><a target="_blank" href="https://dev.finizon.com/insureright">Insureright</a></li>
-            <li><a target="_blank" href="https://dev.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li>
-            <li><a target="_blank" href="https://dev.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li>
+            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/insureright">Insureright</a></li>
+            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li>
+            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li>
             <li style="cursor:pointer;" ><a (click)="insurefitLink()">InsureFit 360</a></li>
             <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li>
             <li style="cursor:pointer;" ><a (click)="monexoLink()">P2P Lending</a></li>
@@ -115,8 +115,8 @@
         </div>
       </div>
 
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Knowledge Center</a></li>
+      <li><a href="#" rel="noopener">About Us</a></li>
+      <li><a href="#" rel="noopener">Knowledge Center</a></li>
       <li style="cursor: pointer;"><a data-toggle="modal" data-target="#supportModal"(click)="showSupportModal()">Support</a></li>
 
     </ul>
@@ -125,7 +125,7 @@
       <li class="mobile hidden-tablet"><a (click)="insureLink()">Insure</a></li>
       <li class="mobile hidden-tablet"><a  (click)="wealthlink()">Wealth</a></li>
 
-      <li class="mobile"><a data-bs-toggle="collapse" href="#Toolscollapse1" role="button" aria-expanded="false"
+      <li class="mobile"><a data-bs-toggle="collapse" href="#Toolscollapse1" rel="noopener" role="button" aria-expanded="false"
           aria-controls="collapseExample" class="drop-menu">Tools</a></li>
       <div class="collapse" id="Toolscollapse1">
         <div class="card card-body">
@@ -134,9 +134,9 @@
             <!-- <li><a target="_blank" href="http://65.1.237.83:5800/insureright">Insureright</a></li>
             <li><a target="_blank" href="http://65.1.237.83:5800/spprd/hospicash?referralid=care">Hospicash</a></li>
             <li><a target="_blank" href="http://65.1.237.83:5800/spprd/wellness?referralid=svaas">Wellness</a></li> -->
-            <li><a target="_blank" href="https://dev.finizon.com/insureright">Insureright</a></li>
-            <li><a target="_blank" href="https://dev.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li>
-            <li><a target="_blank" href="https://dev.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li>
+            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/insureright">Insureright</a></li>
+            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li>
+            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li>
             <li style="cursor:pointer;" ><a (click)="insurefitLink()">InsureFit 360</a></li>
             <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li>
             <li style="cursor:pointer;" ><a (click)="monexoLink()">P2P Lending</a></li>
@@ -144,8 +144,8 @@
           </ul>
         </div>
       </div>
-      <li class="mobile"><a href="#">About Us</a></li>
-      <li class="mobile"><a href="#">Knowledge Center</a></li>
+      <li class="mobile"><a href="#" rel="noopener">About Us</a></li>
+      <li class="mobile"><a href="#" rel="noopener">Knowledge Center</a></li>
       <li class="mobile" style="cursor: pointer;"><a data-toggle="modal" data-target="#supportModal"(click)="showSupportModal()">Support</a></li>
     </ul>
     <div class="nav-footer">
@@ -155,19 +155,19 @@
       </div>
       <ul class="nav-social">
         <li>
-          <a target="_blank" href="https://www.facebook.com/finizonapp"><img
+          <a target="_blank" href="https://www.facebook.com/finizonapp" rel="noopener"><img
               src="assets/img/facebook.svg" alt="fb"></a>
         </li>
         <li>
-          <a target="_blank" href="https://www.instagram.com/finizonapp/"><img
+          <a target="_blank" href="https://www.instagram.com/finizonapp/" rel="noopener"><img
               src="assets/img/instagram.svg" alt="instagram"></a>
         </li>
         <li>
-          <a target="_blank" href="https://www.linkedin.com/company/finizonapp/"><img
+          <a target="_blank" href="https://www.linkedin.com/company/finizonapp/" rel="noopener"><img
               src="assets/img/linkedin.svg" alt="linkedin"></a>
         </li>
         <li>
-          <a target="_blank" href="https://twitter.com/finizonapp"><img src="assets/img/twitter.svg" alt="twitter"></a>
+          <a target="_blank" href="https://twitter.com/finizonapp" rel="noopener"><img src="assets/img/twitter.svg" alt="twitter"></a>
         </li>
       </ul>
       <div class="nav-copyright">
