--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -181,8 +181,8 @@
 
 			<p class="notetext mb-0">AAPT Fintech Private Limited , owner of
 
-				<!-- <a href="http://65.1.237.83/">www.finizon.com</a> -->
-				<a href="https://uatnw.finizon.com/" rel="noopener">www.finizon.com</a>
+				<a href="http://65.1.237.83/" rel="noopener">www.finizon.com</a>
+				<!-- <a href="https://uatnw.finizon.com/" rel="noopener">www.finizon.com</a> -->
 
 
 				is an AMFI-registered Mutual Fund Distributor (ARN-232373) of
@@ -196,8 +196,8 @@
 
 
 				Investment Manager of the products offered through its platform
-				<!-- <a href="http://65.1.237.83/">(www.Finizon.com)</a> -->
-				<a href="https://uatnw.finizon.com/" rel="noopener">(www.Finizon.com)</a>
+				<a href="http://65.1.237.83/" rel="noopener">(www.Finizon.com)</a>
+				<!-- <a href="https://uatnw.finizon.com/" rel="noopener">(www.Finizon.com)</a> -->
 
 
 
